# shebe-releases

./: .gitignore  .gitlab-ci.yml  .mcp.json  ARCHITECTURE.md  LICENSE  Makefile  README.md
.github/workflows/: test-zed-extension.yml
Formula/: shebe.rb
deploy/: docker-compose.yml
docs/testing/: 001-zed-extension-test-plan-01.md
extensions/zed/: Cargo.toml  README.md  extension.toml  extension.wasm
extensions/zed/src/: lib.rs
extensions/zed/tests/: github_release.rs
