[package]
name = "zed-shebe"
# Keep in sync with extensions/zed/extension.toml version
version = "0.5.7"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"

[[test]]
name = "github_release"
path = "tests/github_release.rs"
harness = true
